old_tests/tests/lean/hole_in_fn.lean.expected.out
hole_in_fn.lean:6:13: error: don't know how to synthesize placeholder
context:
n : ℕ
⊢ ℕ
