old_tests/tests/lean/hole_in_fn.lean

inductive foo
| mk : (nat → nat) → foo

definition f : foo :=
foo.mk (λ n, _)
